# LQR_Smoothing_Controller

./: .gitignore  LICENSE  README.md  analyse_exp2.py  cyclonedds_local.xml  generate_report_plots.py  ros_entrypoint.sh
.devcontainer/: devcontainer.json  requirements.txt  wsl-devcontainer.json
lqr_smoothing_test_results/: aggressive_curve_metrics.csv  aggressive_curve_metrics.json  all_cases_metrics.csv  all_cases_metrics.json  arc_case_metrics.csv  arc_case_metrics.json  large_offset_s_curve_metrics.csv  large_offset_s_curve_metrics.json  s_curve_case_metrics.csv  s_curve_case_metrics.json  straight_case_metrics.csv  straight_case_metrics.json
metrics_logging/: LQRController_20260420_004250.csv  LQRController_20260420_004250_summary.csv  LQRController_20260420_004700.csv  LQRController_20260420_004700_summary.csv  LQRController_20260420_020938.csv  LQRController_20260420_020938_summary.csv  LQRController_20260420_025827.csv  LQRController_20260420_025827_summary.csv
results/experiment2/: summary.csv
results/metrics/: LQRController_exp1_baseline.csv  LQRSmoothingController_exp1_heavy.csv  LQRSmoothingController_exp1_light.csv  LQRSmoothingController_exp1_med.csv  LQR_NoPlan_Straight.csv  current_run.csv  exp1_baseline.csv  exp1_heavy.csv  (+19 more)
setup/: clean.sh  cyclonedds.xml  cyclonedds_lo.xml
src/: compare_lqr_smoothing.py  experiment_waypoint_tracking.py
src/nav2_lqr_bringup/: CMakeLists.txt  README.md  package.xml
src/nav2_lqr_bringup/config/: nav2_params.yaml
src/nav2_lqr_bringup/launch/: bringup.launch.py
src/nav2_lqr_bringup/maps/: map.yaml
(+67 files in other folders)
